Revert "feat: change cors"
This reverts commit 78bd6988b4b046efd01647b1a14e60a93570336e.
