# docs/swagger.json
@@ -6,9 +6,9 @@
         "contact": {},
         "version": "1.0"
     },
-    "basePath": "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1",
+    "basePath": "/api/v1",
     "paths": {
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/admin/movies": {
+        "/api/v1/admin/movies": {
             "get": {
                 "security": [
                     {
@@ -68,7 +68,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/admin/movies/{id}/archive": {
+        "/api/v1/admin/movies/{id}/archive": {
             "delete": {
                 "security": [
                     {
@@ -101,7 +101,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/auth/login": {
+        "/api/v1/auth/login": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -137,7 +137,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/auth/logout": {
+        "/api/v1/auth/logout": {
             "delete": {
                 "security": [
                     {
@@ -164,7 +164,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/auth/register": {
+        "/api/v1/auth/register": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -197,7 +197,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/movies/": {
+        "/api/v1/movies/": {
             "get": {
                 "produces": [
                     "application/json"
@@ -236,7 +236,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/movies/popular": {
+        "/api/v1/movies/popular": {
             "get": {
                 "produces": [
                     "application/json"
@@ -255,7 +255,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/movies/upcoming": {
+        "/api/v1/movies/upcoming": {
             "get": {
                 "produces": [
                     "application/json"
@@ -274,7 +274,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/movies/{id}": {
+        "/api/v1/movies/{id}": {
             "get": {
                 "produces": [
                     "application/json"
@@ -302,7 +302,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/users/password": {
+        "/api/v1/users/password": {
             "patch": {
                 "security": [
                     {
@@ -343,7 +343,7 @@
                 }
             }
         },
-        "${import.meta.env.VITE_BE_HOST}/api/v1/img/profile_picsv1/users/profile": {
+        "/api/v1/users/profile": {
             "get": {
                 "security": [
                     {
